--- a/source/i18n/translating_content.txt
+++ b/source/i18n/translating_content.txt
@@ -4,6 +4,11 @@ Translated content
 
 .. contents :: :local:
 
+.. admonition:: Description
+
+        Translating content items in Plone, creating translation programmatically
+        and working with translator. 
+
 Introduction
 -------------
 
