Cache + LinguaPlone updates

--- a/source/i18n/index.txt
+++ b/source/i18n/index.txt
@@ -18,4 +18,5 @@ Plone has three different internationalization subsystems
     language
     translating_content
     contribute_to_translations
+    cache
 
