Fix link to buildout docs.

--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -332,7 +332,7 @@ Examples
 Installing i18ndude
 ===================
 
-The recommended method is to have i18ndude installed via your :doc:`buildout </tutorials/buildout>`.
+The recommended method is to have i18ndude installed via your :doc:`buildout </tutorials/buildout/index>`.
 
 Add the following to your buildout.cfg::
 
