mention zcml translations

--- a/source/i18n/index.txt
+++ b/source/i18n/index.txt
@@ -14,7 +14,7 @@ Plone has three different internationalization subsystems
 .. toctree::
     :maxdepth: 2
 
-    localization
+    internalization
     language
     translating_content
     contribute_to_translations
