--- a/source/i18n/internalization.txt
+++ b/source/i18n/internalization.txt
@@ -207,6 +207,11 @@ There are also other message id markers in code outside Python domain
 
 * TAL page templates have their own mechanism
 
+Translating ZCML
+================
+
+http://stackoverflow.com/questions/6899708/do-zcml-files-get-parsed-i18n-wise
+
 Testing translations
 ----------------------
 
