Edited source/i18n/contribute_to_translations.txt via GitHub

--- a/source/i18n/contribute_to_translations.txt
+++ b/source/i18n/contribute_to_translations.txt
@@ -59,7 +59,7 @@ https://svn.plone.org/svn/collective/PloneTranslations/trunk/locales
 Open the po file with poedit, kbabel or any other i18n tool. For example for
 French::
 
-    poedit fr/LC_MESSAGES/plone.po
+    poedit locales/fr/LC_MESSAGES/plone.po
 
 You can commit your translation from this locales directory::
 
